2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* nsd/driver.c (1.17.2.6): Setting request->method to static
	  storage, which later gets ns_free()'d in Ns_FreeRequest(), caused
	  server to crash.

2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.6): BUMP: 4.0.7a

2004-07-16  tag aolserver_v40_r6

2004-07-16  Dossy Shiobara <dossy@panoptic.com>

	* include/ns.h (1.55.2.5): BUMP: 4.0.6

2004-07-15  Tim Suh <suhti@aol.com>

	* nsd/return.c: keepalive is enabled for response codes other than 200 

2004-07-13  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: driver.c (1.17.2.5), op.c (1.11.2.1): Change to make HTTP
	  request "Host:" header mandatory for HTTP/1.1 connections by
	  returning 400 Bad Request response.  Closes SF Bug #787728.
	  Also, changed virtual server code to use the "hostname" param
	  from the "ns/module/nssock" section to map the default virtual
	  server based on the value (hostname) from the
	  "ns/module/nssock/servers" section, when the "Host:" header is
	  either not specified (HTTP/1.0) or is not found in the virtual
	  server table.  Closes SF Bug #812036.  Backport from HEAD, but
	  not straight patch due to difference in conn/request handling in
	  4.0 vs. 4.1.

2004-07-13  Dossy Shiobara <dossy@panoptic.com>

	* nslog/nslog.c (1.14.2.1): conn->headers can be NULL causing
	  segfault.  Closes SF Bug #990439.  Backported from HEAD.

2004-07-13  Dossy Shiobara <dossy@panoptic.com>

	* include/nsthread.h (1.24.2.1): OpenBSD 3.5 doesn't define
	  ENOTSUP, so we'll define it ourselves.  Closes SF Bug #985076.
	  Backported from HEAD.

2004-07-02  Dossy Shiobara <dossy@panoptic.com>

	* nsd/mimetypes.c (1.11.2.1): Ns_GetMimeType() was returning
	  defaultType instead of noextType if the path contained a
	  directory with a "." but the filename component had no extension.
	  Fixes bug #739049.  Backported from HEAD.

2004-07-02  Dossy Shiobara <dossy@panoptic.com>
