@@ -45,7 +45,6 @@ static const char *RCSID = "@(#) $Header$, compiled: " __DATE__ " " __TIME__;
  *
  *	Library entry point for libnsd.  This routine calls various
  *	data structure initialization functions throughout the core.
- *	Order of the initialization calls is significant.
  *
  * Results:
  	None.
@@ -71,14 +70,15 @@ NsdInit(void)
     	NsInitEncodings();
     	NsInitListen();
     	NsInitLog();
+    	NsInitInfo();
     	NsInitMimeTypes();
     	NsInitModLoad();
     	NsInitProcInfo();
     	NsInitDrivers();
-    	NsInitUrlSpace();
     	NsInitQueue();
     	NsInitSched();
     	NsInitTcl();
+    	NsInitUrlSpace();
     	NsInitRequests();
     }
 }
